[FIX] 내 댓글 조회 API, 좋아요한 댓글 조회 API 응답 수정